--- a/style.css
+++ b/style.css
@@ -853,7 +853,7 @@
   display: flex;
   align-items: center;
   padding: 0 20px;
-  margin: 0 auto 200px;
+  margin: 0 auto 50px;
 
   flex-direction: row;
   width: 1200px;
@@ -1386,7 +1386,7 @@ footer .copyright {
   .header .login {
     position: relative;
     right: 84px;
-    margin-left: 20px;
+    margin-left: 30px;
     display: flex;
     align-items: center;
   }
@@ -1404,11 +1404,16 @@ footer .copyright {
     border-radius: 4px;
     box-shadow: 0 3px 0px #363434;
     cursor: pointer;
-    transition: all ease .2s;
   }
 
   .header .login .user-container:hover {
     background: #656565;
+  }
+
+  .header .login .user-container:active {
+    box-shadow: -.5px -2px 0px #363434;
+    background: #464444;
+    transform: translateY(2px);
   }
 
   .user-container span {
